clusters/production/workloads/simple-gemini/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-gemini-auth
  namespace: simple-gemini
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "100"
    traefik.ingress.kubernetes.io/router.middlewares: oauth2-proxy-oauth2-proxy-errors@kubernetescrd,oauth2-proxy-oauth2-proxy-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - gemini.simplelumine.dev
      secretName: simple-gemini-tls
  rules:
    - host: gemini.simplelumine.dev
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: simple-gemini-controller
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: simple-gemini-controller
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-gemini-public
  namespace: simple-gemini
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "10"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - gemini.simplelumine.dev
      secretName: simple-gemini-tls
  rules:
    - host: gemini.simplelumine.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-gemini-worker
                port:
                  number: 8080
